--- a/Style/offers.css
+++ b/Style/offers.css
@@ -1,8 +1,8 @@
 #shivContainer {
-  display: grid;
-  grid-template-columns: repeat(4, 21%);
-  grid-template-rows: auto;
-  gap: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 20px;
   width: 90%;
   margin: auto;
   justify-content: center;
